<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        style="@style/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Add.AddNotes">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:theme="@style/icon_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notbad"
                android:text="@string/addnote"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/add"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/add"
                android:layout_width="60dp"
                android:layout_height="55dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:padding="10dp"
                android:src="@drawable/baseline_check_24"
                android:theme="@style/icon_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="#C8C1C1" />

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="@dimen/_10sdp"-->
        <!--            android:layout_marginTop="@dimen/_10sdp"-->
        <!--            android:layout_marginEnd="@dimen/_10sdp"-->
        <!--            android:fontFamily="@font/notsans"-->
        <!--            android:text="Title"-->
        <!--            android:textColor="#AB000000"-->
        <!--            android:textSize="@dimen/_25sdp"-->
        <!--            android:textStyle="bold" />-->

        <TextView
            android:id="@+id/set_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="10dp"
            android:text="date"
            android:textColor="#80000000"
            android:textSize="@dimen/_10sdp" />

        <EditText
            android:id="@+id/add_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@null"
            android:hint="@string/write_tittle_here"
            android:minHeight="@dimen/_48sdp" />

        <EditText
            android:id="@+id/add_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@null"
            android:hint="@string/write_content_here"
            android:minHeight="@dimen/_48sdp" />
    </LinearLayout>
</layout>